--- a/style.css
+++ b/style.css
@@ -1,100 +1,168 @@
-@import url('https://fonts.googleapis.com/css?family=Century+Gothic:400,700&display=swap');
-
-
 * {
-	margin: 1;
-	padding: 0;
-	box-sizing: border-box
+	/* margin: 0px !important; */
+	/* padding: 0px !important; */
+	/* margin-right: 0px !important;	 */
 }
 
-/* global configurations */
-:root {
-	--bg-Color: #e5e5e5, #1DA88F;
-	--font: 'Century Gothic' !important;
+body {
+	font-family: Sans-serif !important;
+	align-content: center !important; 
+}	
+
+/* Century Gothic , */
+
+h1 {
+	color: #DB4040;
 }
 
-/* global configurations ends here */
 
-body{
-	background: #e5e5e5;
+.row {
+	margin-right: 0px;
+	margin-left: 0px;
+	padding-bottom: 10px;
+}
+.col-xs-12 {
+	padding-bottom: 10px;
+}
+
+.container {
 	align-content: center;
 	text-align: center;
-	}
-
-.container{
-	display: block;
-	left: 0px;
-	top: 0px;
-	background-image: linear-gradient(180deg, #1DA88F 0%, rgba(99, 187, 68, 0.38) 100%);
-	position:absolute;
-	width: 1440px;
-	height: 1024px; 
+	padding-right: 0px;
+	padding-left: 0px;
+	padding-bottom: 20px !important;
 }
 
-.signup-heading{
-	color: #fffdfd;
-	font-family: var(--font);
-	font-size: 36px;
-	line-height: 44px;
+.navbar {
+	background-color: #524E4E;
+	color: #FFFFFF;
+	text-align: left;
+	padding: 1% 1% 1% 1%;
+	font-size: 1.5em;
+}
+#legend {
+	margin-top: 20 !important;
 }
 
-.form-container{
-	width: 513px;
-	height: 600px;
-	background: #FFFFFF;
-	margin-left: 450px;
-	line-height: 40px;
-	border-radius: 5px;
+
+.cont {
+	width: fit-content;
 }
 
-.form-container h3{
-	font-family: var(--font);
-	font-size: 30px;
-	padding-top: 50px;
+.smalltitle {
+	font-weight: 100;
+	color: #DB4040;
+}
+.computed {
+	width: 60%;
+	padding: 20px;
+	margin: auto !important;
+	/* background: rgb(216, 177, 177) !important; */
+	background: rgb(209, 209, 209);
+	min-height: 50px;
+	/* width: fit-content; */
 }
 
 .form-control {
-	width: 360px;
-	height: 40px;
-	background: #f6f6f6;
-	margin-top: 30px;
-	font-family: var(--font);
-	font-size: 12px;
-	line-height: 15px;
+	background: rgb(209, 209, 209);
+	margin: auto;
+	width: 60%;
+
+}
+::placeholder {
+	color: rgb(63, 63, 63) !important;
 }
 
-input.name::placeholder{
-	font-family: var(--font);
-	font-size: 15px;
-	font-family: monospace;
+.des-text {
+	font-weight: 100;
+	font-size: 36px;
+	margin-top: 20px;
+	margin-bottom:	45px;
 }
 
-#signup{
-	width: 200px;
-	height: 40px;
-	background: linear-gradient(180deg, #139E10 0%, rgba(32, 92, 31, 0.56) 100%);
-	left: 646px;
-	top: 600px;
-	font-family: var(--font);
-	font-size: 13px;
-	line-height: 16px;
-	color: #fff;
-	margin-top: 40px;
-	border:3px solid #fff;
-	box-sizing: border-box;
-	border-radius: 30px;
+.add_btn {
+	border: 1px solid #ccc;
+	background-color: #FFFFFF;
+	font-family: Century Gothic , Sans-serif;
+	padding: 5px;
+	border-radius: 100%;
+	width: 50px;
+	margin-top: 4%;
+	color: rgb(124, 119, 119);
+	font-weight: bold;
+	font-size: 20px;
 }
-
-#signup:hover{
-	background-color: #000;
-}
-#login{
+.btn1 {
+	/* border: 2px solid #000000; */
+	/*border: none;*/
+	padding: 3px 100px;
+	text-align:center;
 	text-decoration: none;
-	color: #000;
-	font-family: var(--font);
+	display:inline-block;
+	font-size: 2em;
+	font-weight: bold;
+	background-color: #DB4040;
+	font-family: Century Gothic , Sans-serif;
+	color: #000000;
+	width: 59%;
 }
 
-#login:hover{
-	background: linear-gradient(180deg, #139E10 0%, rgba(32, 92, 31, 0.56) 100%);	
+.btn-plus {
+	border: 2px solid #000000;
+	/*padding: 5px 100px*/;
+	text-align:center;
+	text-decoration: none;
+	display:inline-block;
+	font-size: 1.5em;
+	background-color: #FFFFFF;
+	font-family: Century Gothic , Sans-serif;
+	color: #000000;
+}
+.col-xs-12 h4 {
+	font-family:  serif;
+	font-weight: bold;
 }
 
+.h1, h1 {
+    font-size: 47px;
+}
+
+.cont .left {
+	float: left;
+}
+.cont .right {
+	float: right;
+}
+.cont {
+	width: 100%;
+	font-size: 30px;
+}
+@media (min-width: 768px) {
+	.container {
+		width: 100%;
+		margin: 0px !important;
+		margin-left: 0px !important;
+		padding-left: 0px !important;
+		border-radius: 0px !important;
+	}
+
+
+	.navbar {
+		border-radius: 0px;
+	}
+
+	.add_btn {
+		float: left;
+		margin-top: 32px !important;
+		border: 1px solid #ccc;
+	}
+	.input_container {
+		margin-left: 15%;
+		
+	}
+	.form-control {
+		width: 100%;
+	
+	}
+	
+}
